--- a/public/themes/tailwind-light/theme.css
+++ b/public/themes/tailwind-light/theme.css
@@ -4519,90 +4519,110 @@
   border: 1px solid #e5e7eb;
   border-radius: 0.375rem;
 }
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link {
-  padding: 0.75rem 1rem;
+.p-megamenu .p-megamenu-root-list {
+  outline: 0 none;
+}
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content {
   color: #3f3f46;
-  border-radius: 0.375rem;
   transition: none;
+  border-radius: 0.375rem;
+}
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link,
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-action {
+  padding: 0.75rem 1rem;
   user-select: none;
 }
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link .p-menuitem-text {
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
   color: #3f3f46;
 }
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link .p-menuitem-icon {
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
   color: #71717A;
   margin-right: 0.5rem;
 }
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link .p-submenu-icon {
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
   color: #71717A;
   margin-left: 0.5rem;
 }
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover {
+.p-megamenu .p-megamenu-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover {
+  color: #18181B;
   background: #f4f4f5;
 }
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
+.p-megamenu .p-megamenu-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-text,
+.p-megamenu .p-megamenu-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-menuitem-text {
   color: #18181B;
 }
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-icon {
+.p-megamenu .p-megamenu-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-icon, .p-megamenu .p-megamenu-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-submenu-icon,
+.p-megamenu .p-megamenu-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-menuitem-icon,
+.p-megamenu .p-megamenu-root-list > .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-submenu-icon {
   color: #71717A;
 }
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover .p-submenu-icon {
-  color: #71717A;
-}
-.p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:focus {
-  color: #18181B;
-  background: #e5e7eb;
-  outline: none;
-}
-.p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link,
-.p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover {
-  background: #f4f4f5;
-}
-.p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-text,
-.p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
+.p-megamenu .p-menuitem > .p-menuitem-content {
   color: #3f3f46;
-}
-.p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-icon,
-.p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-icon {
-  color: #71717A;
-}
-.p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link .p-submenu-icon,
-.p-megamenu .p-megamenu-root-list > .p-menuitem.p-menuitem-active > .p-menuitem-link:not(.p-disabled):hover .p-submenu-icon {
-  color: #71717A;
-}
-.p-megamenu .p-menuitem-link {
-  padding: 0.75rem 1rem;
-  color: #3f3f46;
-  border-radius: 0;
   transition: none;
+  border-radius: 0;
+}
+.p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-link,
+.p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-action {
+  padding: 0.75rem 1rem;
   user-select: none;
 }
-.p-megamenu .p-menuitem-link .p-menuitem-text {
+.p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
   color: #3f3f46;
 }
-.p-megamenu .p-menuitem-link .p-menuitem-icon {
+.p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
+.p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
   color: #71717A;
   margin-right: 0.5rem;
 }
-.p-megamenu .p-menuitem-link .p-submenu-icon {
+.p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
   color: #71717A;
 }
-.p-megamenu .p-menuitem-link:not(.p-disabled):hover {
+.p-megamenu .p-menuitem.p-highlight > .p-menuitem-content {
+  color: #3f3f46;
   background: #f4f4f5;
 }
-.p-megamenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
-  color: #18181B;
+.p-megamenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-megamenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #3f3f46;
 }
-.p-megamenu .p-menuitem-link:not(.p-disabled):hover .p-menuitem-icon {
+.p-megamenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-megamenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-megamenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-megamenu .p-menuitem.p-highlight > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
   color: #71717A;
 }
-.p-megamenu .p-menuitem-link:not(.p-disabled):hover .p-submenu-icon {
-  color: #71717A;
+.p-megamenu .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
+  background: #f4f4f5;
 }
-.p-megamenu .p-menuitem-link:focus {
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content {
   color: #18181B;
   background: #e5e7eb;
-  outline: none;
+}
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+  color: #18181B;
+}
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-menuitem-icon, .p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-menuitem-icon,
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+  color: #18181B;
+}
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover {
+  color: #18181B;
+  background: #f4f4f5;
+}
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-text,
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-menuitem-text {
+  color: #18181B;
+}
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-menuitem-icon, .p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-link .p-submenu-icon,
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-menuitem-icon,
+.p-megamenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-submenu-icon {
+  color: #71717A;
 }
 .p-megamenu .p-megamenu-panel {
   background: #ffffff;
@@ -4610,7 +4630,7 @@
   border: 0 none;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
-.p-megamenu .p-megamenu-submenu-header {
+.p-megamenu .p-submenu-header {
   margin: 0;
   padding: 0.75rem 1rem;
   color: #3f3f46;
@@ -4619,22 +4639,14 @@
   border-top-right-radius: 0.375rem;
   border-top-left-radius: 0.375rem;
 }
-.p-megamenu .p-megamenu-submenu {
+.p-megamenu .p-submenu-list {
   padding: 0.25rem 0;
   width: 12.5rem;
 }
-.p-megamenu .p-megamenu-submenu .p-menu-separator {
+.p-megamenu .p-submenu-list .p-menu-separator,
+.p-megamenu .p-submenu-list .p-menuitem-separator {
   border-top: 1px solid #f3f4f6;
   margin: 0.25rem 0;
-}
-.p-megamenu .p-menuitem.p-menuitem-active > .p-menuitem-link {
-  background: #f4f4f5;
-}
-.p-megamenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-text {
-  color: #3f3f46;
-}
-.p-megamenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-menuitem-icon, .p-megamenu .p-menuitem.p-menuitem-active > .p-menuitem-link .p-submenu-icon {
-  color: #71717A;
 }
 .p-megamenu.p-megamenu-vertical {
   width: 12.5rem;
@@ -5001,27 +5013,27 @@
 .p-panelmenu .p-panelmenu-content .p-panelmenu-root-submenu {
   outline: 0 none;
 }
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content {
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content {
   color: #3f3f46;
   transition: none;
   border-radius: 0;
 }
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-link,
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-action {
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-link,
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-action {
   padding: 0.75rem 1rem;
   user-select: none;
 }
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-text,
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
   color: #3f3f46;
 }
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
   color: #71717A;
   margin-right: 0.5rem;
 }
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon,
-.p-panelmenu .p-panelmenu-content .p-menuitem .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
   color: #71717A;
 }
 .p-panelmenu .p-panelmenu-content .p-menuitem.p-highlight > .p-menuitem-content {
@@ -5203,7 +5215,7 @@
   border: 0 none;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
-.p-tieredmenu .p-tieredmenu-root-submenu {
+.p-tieredmenu .p-tieredmenu-root-list {
   outline: 0 none;
 }
 .p-tieredmenu .p-submenu-list {
@@ -5212,27 +5224,27 @@
   border: 0 none;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
-.p-tieredmenu .p-menuitem .p-menuitem-content {
+.p-tieredmenu .p-menuitem > .p-menuitem-content {
   color: #3f3f46;
   transition: none;
   border-radius: 0;
 }
-.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link,
-.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action {
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-link,
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-action {
   padding: 0.75rem 1rem;
   user-select: none;
 }
-.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-text,
-.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-text {
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text,
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-action .p-menuitem-text {
   color: #3f3f46;
 }
-.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
-.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon,
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-action .p-menuitem-icon {
   color: #71717A;
   margin-right: 0.5rem;
 }
-.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon,
-.p-tieredmenu .p-menuitem .p-menuitem-content .p-menuitem-action .p-submenu-icon {
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-link .p-submenu-icon,
+.p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-action .p-submenu-icon {
   color: #71717A;
 }
 .p-tieredmenu .p-menuitem.p-highlight > .p-menuitem-content {
